--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -207,8 +207,9 @@ a:hover
 }
 
 .feature-selection-image {
-  margin-top: 10%;
-  width:50%;
+  margin-top: 5%;
+  width:30%;
+  margin-right:10%;
   height: auto;
 }
 
@@ -239,7 +240,7 @@ a:hover
   margin-left:10%;
   font-size:24px;
   font-weight:400;
-  line-height:1.5;
+  line-height:1.3;
   font-family: "Helvetica Neue", sans-serif;
   color: #636363;
   display: block;
@@ -257,7 +258,8 @@ a:hover
 }
 
 .text-image-container {
-  margin-left:2%;
+  margin-left:1%;
+  margin-top:-4%;
 }
 
 .pg-1-image-block {
@@ -269,8 +271,10 @@ a:hover
 }
 
 .personal-pref-image {
-  width:30%;
+  margin-top:-3%;
+  width:20%;
   height: auto;
+  z-index: -1;
 }
 
 .scenario-names {
@@ -361,4 +365,17 @@ a:hover
   font-family: "Helvetica Neue bold", sans-serif;
   font-weight: bold;
   margin-top: 5%;
+}
+
+.range-field {
+  float:right;
+  font-size:22px;
+  font-weight:400;
+  font-family: "Helvetica Neue", sans-serif;
+}
+
+#range_form {
+  max-width:30%;
+  float:right;
+  margin-top:-1.5%;
 }
