--- a/app/views/pairwise_comparisons/index.html.erb
+++ b/app/views/pairwise_comparisons/index.html.erb
@@ -26,10 +26,13 @@
 <p id="prompt" class="feature-text">
   Please choose which request you would prefer the algorithm to match you with.
 </p>
-<h4 id = "counter">
+<% if false %>
+
+<h4 id = "counter" style="margin-top:3%">
   Scenario 1/<%= @num_pairs %>
 </h4>
-<br/> <br/>
+<% end %> 
+<br/>
 
 <div id = "all_encompassing" class = "0">
 
@@ -108,8 +111,8 @@
 <br><br> <br>
 
 <%# TODO disable this if nothing inputted %>
-<a class="waves-effect waves-dark btn" id = "next_btn" style = "margin-left:40%;width:20%;color:#FFFFFF;background-color:#3d6ab1;font-weight:bold;" >
-Next Scenario
+<a class="waves-effect btn" id = "next_btn" style = "margin-left:40%;width:20%;color:#FFFFFF;background-color:#3d6ab1;font-weight:bold;" >
+  Next Scenario (2/<%= @num_pairs %>)
 </a>
 <br><br><br>
 <br><br><br><br>
@@ -223,7 +226,15 @@ Next Scenario
       $('.f-' + `${first+prev}`).css('display', 'none')
       $('.container-' + `${first+prev+1}`).css('display', 'block')
       $('.f-' + `${first+prev+1}`).css('display', 'block')
-      $("#counter").html(`Scenario ${((prev+1)%(num_pairs))+1}/${num_pairs}`)
+
+      if (((prev+1)%(num_pairs))+1 != num_pairs ) {
+        $("#next_btn").html(`Next Scenario (${((prev+1)%(num_pairs))+2}/${num_pairs})`)
+      }
+      else {
+        $("#next_btn").html(`Finish`)
+      }
+      $("#titulo").html(`Scenario ${((prev+1)%(num_pairs))+1}/${num_pairs}`)
+      titulo
 
     });
 
